// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI-WORKBENCH Portfolio|Button . default 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 100px;
  background: #ccc;
}

.emotion-2 > div {
  width: 500px;
  height: 333px;
}

.emotion-0 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
}

.emotion-0 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-0 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-0 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-0:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-0:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-0:hover .accent,
.emotion-0:hover .label {
  opacity: 1;
}

.emotion-0:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    origin={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
      }
    }
  >
    <div
      className="label"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
    />
    <a
      className="accent"
      href="#"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
      target="_blank"
    />
    This is a button
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Button image 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 100px;
  background: #ccc;
}

.emotion-2 > div {
  width: 500px;
  height: 333px;
}

.emotion-0 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
}

.emotion-0 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-0 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-0 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-0:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-0:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-0:hover .accent,
.emotion-0:hover .label {
  opacity: 1;
}

.emotion-0:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    origin={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
      }
    }
  >
    <div
      className="label"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
    />
    <a
      className="accent"
      href="#"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
      target="_blank"
    />
    <img
      src={Object {}}
    />
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Button styled 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 100px;
  background: #ccc;
}

.emotion-3 > div {
  width: 500px;
  height: 333px;
}

.emotion-1 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
  width: 500px;
  height: 333px;
}

.emotion-1 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-1 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-1 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-1:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-1:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-1:hover .accent,
.emotion-1:hover .label {
  opacity: 1;
}

.emotion-1:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
}

.emotion-1 .label {
  width: 40px;
  margin-left: 400px;
  margin-top: 20px;
}

.emotion-1:hover .label {
  margin-left: 400px;
  margin-top: 40px;
}

.emotion-1:hover .accent {
  margin-left: 40px;
  margin-top: 40px;
}

<div
  className="emotion-3 emotion-4"
>
  <div
    className="emotion-0 emotion-1 emotion-2"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    origin={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
      }
    }
  >
    <div
      className="label"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
    >
      Nya! nya! nya!
    </div>
    <a
      className="accent"
      href="#"
      style={
        Object {
          "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
        }
      }
      target="_blank"
    />
    <img
      src={Object {}}
    />
  </div>
</div>
`;
